--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+                "src/styles.scss",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/ngx-toastr/toastr.css",
+                "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+                "node_modules/froala-editor/css/froala_style.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+            
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -62,7 +68,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "isocanProjesi:build"
+            "browserTarget": "isocanProjesi:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
