--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -19,7 +19,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/quill": "^2.0.2",
+    "angular": "^1.7.8",
+    "angular-froala-wysiwyg": "^3.0.4",
+    "angular-sanitize": "^1.7.8",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
+    "ng-quill": "^4.5.1",
+    "ng2-izitoast": "^2.0.0",
+    "ng4-loading-spinner": "^1.2.3",
+    "ngx-toastr": "^10.0.4",
+    "ngxf-uploader": "^1.6.0",
+    "notie": "^4.3.1",
+    "popper": "^1.0.1",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
